# CS2205.CH201

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  ingest.py  main.py  pyproject.toml  verify_env.py
src/: config.py  logger.py  state.py
src/chains/: modules.py
src/components/: ocr.py  vectordb.py
src/conf/: config.yaml  structure.py
src/graph/: nodes.py  workflow.py
src/server/: app.py  routes.py  schemas.py
